# finops-ev-telematics

./: .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  SHA256SUMS.txt  VALIDATION.md  pyproject.toml  reproduce.py  requirements-dev-lock.txt  requirements-dev.txt  requirements-lock.txt  requirements.txt  setup.py
.github/workflows/: reproduce.yml
data/: FinOps_EV_Telematics_Dataset.xlsx  README.md  implementation_series.csv  indexed_monthly_data.csv  long_horizon_scenarios.csv  manuscript_reference_results.json  model_metrics_final.csv  published_common_fold_predictions.csv  service_cost_shares.csv
docs/: METHODS.md  OUTPUT_MAP.md  UPLOAD_TO_GITHUB.md  methodology.md
figures/: README.md
outputs/: README.md
scripts/: retrain_neural_models.py
src/: __init__.py  finops_forecasting.py
src/finops_repro/: __init__.py  benchmark.py  cli.py  counterfactual.py  data.py  interrupted_time_series.py  metrics.py  neural.py  pipeline.py  plots.py
src/models/: __init__.py  arima.py  lstm.py  polynomial.py  prophet_model.py
src/utils/: __init__.py  metrics.py  visualization.py
tests/: test_benchmark.py  test_counterfactual.py  test_data.py  test_its.py  test_models.py  test_pipeline.py
